syntax = "proto3";

package order;

option go_package = "./order";

message OrderProduct {
  string productId = 1;
  int32 quantity = 2;
}

message Order {
  string id = 1;
  string customerId = 2;
  repeated OrderProduct products = 3;
}

service OrderService {
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc FindAllOrders (FindAllOrdersRequest) returns (FindAllOrdersResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message CreateOrderRequest {
  string customerId = 1;
  repeated OrderProduct products = 2;
}

message CreateOrderResponse {
  string orderId = 1;
}

message FindAllOrdersRequest {}

message FindAllOrdersResponse {
  repeated Order orders = 1;
}

message UpdateOrderRequest {
  string id = 1;
  string customerId = 2;
  repeated OrderProduct products = 3;
}

message UpdateOrderResponse {
  Order order = 1;
}

message DeleteOrderRequest {
  string id = 1;
}

message DeleteOrderResponse {
  string message = 1;
}
